@@ -1,6 +1,6 @@
 #ifndef lint
 static char const
-yyrcsid[] = "$FreeBSD: src/usr.bin/yacc/skeleton.c,v 1.28 2000/01/17 02:04:06 bde Exp $";
+yyrcsid[] = "$Id$";
 #endif
 #include "ace/os_include/os_stdlib.h"
 #define YYBYACC 1
